# kply

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  action.yml  deny.toml  dist-workspace.toml
.github/: actionlint.yaml
.github/ISSUE_TEMPLATE/: agent-workflow-request.yml  config.yml  kubernetes-discovery-bug.yml  roadmap-request.yml  routing-environment.yml  session-planning-gap.yml
.github/workflows/: action-self-test.yml  ci.yml  release.yml
crates/: README.md
crates/kply-checks/: Cargo.toml
crates/kply-checks/src/: lib.rs
crates/kply-cli/: Cargo.toml
crates/kply-cli/src/: cli.rs  demo.rs  doctor.rs  lib.rs  local.rs  main.rs
crates/kply-cli/src/demo/: doctor.rs  install.rs  reset.rs  teardown.rs
crates/kply-cli/src/snapshots/: kply__tests__check_run_json_report.snap  kply__tests__check_run_text_report.snap  kply__tests__check_run_text_report_without_empty_evidence.snap  kply__tests__init_config_yaml.snap  kply__tests__init_report_ambiguous_selector_text.snap  kply__tests__init_report_empty_text.snap  kply__tests__init_report_json.snap  kply__tests__init_report_multiple_apps_text.snap  kply__tests__report_unavailable_json.snap  kply__tests__report_unavailable_markdown.snap  kply__tests__report_unavailable_text.snap
crates/kply-cli/tests/: cli.rs  demo_manifests.rs
crates/kply-cli/tests/snapshots/: cli__app_graph_json.snap  cli__app_graph_requires_json.snap  cli__app_graph_text.snap  cli__app_inspect_json.snap  cli__app_inspect_missing_app.snap  cli__app_inspect_missing_app_json.snap  cli__app_inspect_text.snap  cli__app_inspect_text_without_default_image.snap  cli__app_list_configured_json.snap  cli__app_list_configured_text.snap  cli__app_list_empty_json.snap  cli__app_list_empty_text.snap  cli__app_list_invalid_config.snap  cli__app_list_invalid_config_json.snap  cli__check_run_invalid_session_id.snap  cli__check_run_invalid_session_id_json.snap  cli__check_run_missing_kubeconfig.snap  cli__check_run_missing_kubeconfig_json.snap  cli__cluster_info_json.snap  cli__cluster_info_kubeconfig_error.snap  cli__cluster_info_kubeconfig_json_error.snap  cli__cluster_info_text.snap  cli__command_group_app.snap  cli__command_group_app_json.snap  cli__command_group_check.snap  cli__command_group_check_json.snap  cli__command_group_cluster.snap  cli__command_group_cluster_json.snap  cli__command_group_completion.snap  cli__command_group_completion_json.snap  cli__command_group_config.snap  cli__command_group_config_json.snap  cli__command_group_demo.snap  cli__command_group_demo_json.snap  cli__command_group_policy.snap  cli__command_group_policy_json.snap  cli__command_group_report.snap  cli__command_group_report_json.snap  cli__command_group_route.snap  cli__command_group_route_json.snap  (+146 more)
crates/kply-config/: Cargo.toml
crates/kply-config/src/: lib.rs
crates/kply-core/: Cargo.toml
crates/kply-core/src/: lib.rs  manifest.rs
crates/kply-k8s/: Cargo.toml
crates/kply-k8s/src/: lib.rs
crates/kply-k8s/src/snapshots/: kply_k8s__tests__read_only_app_kubernetes_response_summaries.snap
crates/kply-k8s/tests/: live_cluster.rs  offline_apply.rs  offline_discovery.rs
crates/kply-k8s/tests/snapshots/: offline_discovery__read_only_app_offline_discovery.snap  offline_discovery__session_list_offline_discovery.snap
crates/kply-routing/: Cargo.toml
crates/kply-routing/src/: lib.rs
crates/kply-test/: Cargo.toml
crates/kply-test/src/: lib.rs
crates/kply-test/src/snapshots/: kply_test__tests__helper_check_report.snap  kply_test__tests__helper_cli_json.snap  kply_test__tests__helper_cli_text.snap  kply_test__tests__helper_manifest.snap  kply_test__tests__helper_route_plan.snap
crates/kubeply-checks/: Cargo.toml
crates/kubeply-checks/src/: lib.rs
crates/kubeply-cli/: Cargo.toml
crates/kubeply-cli/src/: cli.rs  main.rs
crates/kubeply-cli/tests/: cli.rs
crates/kubeply-cli/tests/snapshots/: cli__session_create_json.snap  cli__version_json.snap
crates/kubeply-config/: Cargo.toml
crates/kubeply-config/src/: lib.rs
crates/kubeply-core/: Cargo.toml
crates/kubeply-core/src/: lib.rs
crates/kubeply-k8s/: Cargo.toml
crates/kubeply-k8s/src/: lib.rs
crates/kubeply-routing/: Cargo.toml
crates/kubeply-routing/src/: lib.rs
crates/kubeply-test/: Cargo.toml
crates/kubeply-test/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: architecture.md  cli.md  commercial-boundary.md  demo-agent.md  demo-kind.md  demo-terminal-cast.cast  demo-terminal-cast.md  feedback-triage.md  first-release.md  gateway-api.md  github-actions.md  implementation-roadmap.md  product-sprints.md  product.md  rbac.md  release-notes-template.md  release.md  report-agent.md  terminal-agents.md
docs/archive/: implementation-roadmap-v0-foundation.md
examples/: README.md  kply.yaml  kubeply.yaml
fixtures/: README.md
fixtures/cli/: README.md
fixtures/config/: README.md
fixtures/config/complete-single-app/: kply.yaml
fixtures/config/invalid-empty-app-fields/: kply.yaml
fixtures/config/invalid-unknown-routing-field/: kply.yaml
fixtures/config/invalid-unknown-top-level-field/: kply.yaml
fixtures/config/invalid-unsupported-version/: kply.yaml
fixtures/config/multi-app-route-strategies/: kply.yaml
fixtures/config/policy-baseline/: kply.yaml
fixtures/demo/: README.md
fixtures/demo/ecommerce-basic/: README.md  kply.yaml
fixtures/k8s-responses/: README.md
fixtures/k8s-responses/gateway-api-supported/: gatewayclasses.json  gateways.json  httproutes.json
fixtures/k8s-responses/gateway-api-unsupported-missing-class/: gatewayclasses.json  gateways.json  httproutes.json
fixtures/k8s-responses/gateway-api-unsupported-tcp-only/: gatewayclasses.json  gateways.json  httproutes.json
fixtures/k8s-responses/ingress-common-annotations/: ingresses.json
fixtures/k8s-responses/read-only-app/: deployments.json  gatewayclasses.json  gateways.json  httproutes.json  ingresses.json  pods.json  services.json
fixtures/manifests/: README.md
fixtures/reports/: README.md
scripts/: demo-walkthrough.sh
(+44 files in other folders)
