[workspace]
members = [
    "crates/kply-checks",
    "crates/kply-cli",
    "crates/kply-config",
    "crates/kply-core",
    "crates/kply-k8s",
    "crates/kply-routing",
    "crates/kply-test",
    "crates/xtask",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/kubeply/kply"
authors = ["Kubeply"]

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.1"
clap = { version = "4.5.51", features = ["derive"] }
http = "1.4.0"
insta = { version = "1.44.0", features = ["json"] }
kply-checks = { path = "crates/kply-checks" }
kply-config = { path = "crates/kply-config" }
kply-core = { path = "crates/kply-core" }
kply-k8s = { path = "crates/kply-k8s" }
kply-routing = { path = "crates/kply-routing" }
kply-test = { path = "crates/kply-test" }
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
kube = { version = "3.1.0", default-features = false, features = ["client", "config", "ring", "rustls-tls"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_norway = "0.9.42"
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.52.3", features = ["macros", "rt", "sync", "time"] }
toml = "1.1.2"
tower-test = "0.4.0"

[profile.dist]
inherits = "release"
lto = "thin"
