[package]
name = "kply-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "kply"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
k8s-openapi.workspace = true
kply-checks.workspace = true
kply-config.workspace = true
kply-core.workspace = true
kply-k8s.workspace = true
kply-routing.workspace = true
serde.workspace = true
serde_norway.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
insta.workspace = true
kply-test.workspace = true
