[package]
name = "kply-k8s"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kply-core.workspace = true
kube.workspace = true

[dev-dependencies]
k8s-openapi.workspace = true
kply-test.workspace = true
tokio.workspace = true
