[package]
name = "kply-k8s"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
k8s-openapi.workspace = true
kply-core.workspace = true
kube.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
http.workspace = true
kply-test.workspace = true
tokio.workspace = true
tower-test.workspace = true
