[package]
name = "kply-routing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kply-core.workspace = true
kply-k8s.workspace = true
serde.workspace = true

[dev-dependencies]
k8s-openapi.workspace = true
kply-test.workspace = true
kube.workspace = true
serde_json.workspace = true
