[package]
name = "kply-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
assert_cmd.workspace = true
insta.workspace = true
regex.workspace = true
serde_json.workspace = true
tempfile.workspace = true
