[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[package.metadata.dist]
dist = false

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde_norway.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
